# Lexacc

./: .clang_complete  CMakeLists.txt  run.sh
example/: c_like.cpp
example/c_like/: c_like.cpp
include/: actions.hpp  context_analyzer.hpp  finite_automation.hpp  lexer.hpp  parser.hpp  preprocess.hpp  quad.hpp  symbol.hpp  syntax_tree.hpp  token.hpp  utilty.hpp
lib/: context_analyzer.cpp  finite_automation.cpp  ir_generator.cpp  main.cpp  parser.cpp  symbol.cpp  token.cpp
src/: lexer.cpp  main.cpp  regular_parser.cpp  token.cpp
test/: test.clike
